# sprav-vrac

./: .gitmodules  CMakeLists.txt  README.md  vrac.c
keys/: dilithium2.pub
